--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,9 @@
 body {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
   margin: 0;
 }
 
-body p {
-  font-family: Vazirmatn, sans-serif;
+body::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
