--- a/src/Components/BigPhoneWidget/Style/style.css
+++ b/src/Components/BigPhoneWidget/Style/style.css
@@ -54,6 +54,9 @@
   height: 40px;
   width: 90%;
   border-radius: 10px;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
   background-color: #959ba1;
 }
 
@@ -66,7 +69,7 @@
   display: flex;
 }
 
-.widget-control-container > div {
+.widget-control-container > div:nth-child(1) {
   background-color: #959ba1;
   border-radius: 10px;
   height: 80px;
@@ -78,7 +81,7 @@
   padding: 0px 5px;
 }
 
-.widget-control-container > div {
+.widget-control-container > div:nth-child(2) {
   background-color: #959ba1;
   border-radius: 10px;
   height: 80px;
@@ -93,4 +96,9 @@
 .big-phone-icons {
   font-size: 40px;
   color: #e8eaeb;
+}
+
+.big-phone-icons.profile {
+  font-size: 30px;
+  margin-right: 10px;
 }
