--- a/src/Components/LampWidget/Style/style.css
+++ b/src/Components/LampWidget/Style/style.css
@@ -1,14 +1,14 @@
 .lamp-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  padding: 70px 40px 40px 40px;
-  /* background-color: #000; */
+  padding: 40px;
   z-index: -4;
+  position: relative;
 }
 .lamp {
-  width: 50px;
-  height: 50px;
+  width: 36px;
+  height: 36px;
   background-color: #999;
   border-radius: 50%;
   position: relative;
@@ -19,26 +19,28 @@
 }
 
 .lamp::before {
+  /*lamp-holder*/
   position: absolute;
   content: "";
-  width: 20px;
-  height: 40px;
-  border-radius: 10px 10px 0px 0px;
-  border-top: solid #222 20px;
+  width: 14px;
+  height: 10px;
+  border-radius: 5px 5px 0px 0px;
+  border-top: solid #222 15px;
   background-color: inherit;
-  left: 15px;
-  top: -25px;
+  left: 11px;
+  top: -20px;
   z-index: -1;
 }
 
 .lamp::after {
+  /*lamp-wire*/
   content: "";
   position: absolute;
-  width: 5px;
+  width: 4px;
   height: 50px;
   background-color: #222;
-  left: 23px;
-  top: -50px;
+  left: 16px;
+  top: -42px;
   z-index: -2;
 }
 
@@ -59,6 +61,17 @@
   );
 }
 
+.lamp-container .lamp-box {
+  /*for boxing lamp*/
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  /* border: 1px solid #222; */
+  border-radius: 10px;
+  background-color: #917a67;
+  z-index: -3;
+}
+
 @keyframes turnOnLamp {
   10% {
     background-color: #ffdf00;
@@ -77,5 +90,6 @@
 @media screen and (max-width: 600px) {
   .lamp-container {
     padding: 60px 10px 10px 10px;
+    order: 2;
   }
 }
