--- a/src/Components/Widget/Style/style.css
+++ b/src/Components/Widget/Style/style.css
@@ -5,4 +5,14 @@
   z-index: -5;
   border-radius: 20px;
   padding: 20px;
+  flex-direction: row;
+}
+
+@media screen and (max-width: 600px) {
+  .main-gadget-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 5px 50px 5px;
+  }
 }
