added rain with css TODO: enable rain with redux

--- a/src/Components/FlowerWidget/Style/style.css
+++ b/src/Components/FlowerWidget/Style/style.css
@@ -77,6 +77,7 @@
   height: 40px;
   z-index: -3;
   transform-origin: 20px 35px;
+  /* animation: flowerRotate 2500ms linear infinite; */
 }
 
 .flower > div :nth-of-type(1) {
@@ -119,8 +120,74 @@
   top: 26px;
 }
 
+.flower-rain {
+  position: absolute;
+  top: 2px;
+  display: flex;
+  justify-content: center;
+  left: 15px;
+  width: 90px;
+  height: 100px;
+}
+
+.flower-rain.visible {
+  visibility: visible;
+}
+
+.flower-rain.hidden {
+  visibility: hidden;
+}
+
+.flower-rain span {
+  top: 0;
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: #d4f1f9;
+  margin: 0px 5px;
+  border-radius: 0px 10px 10px 10px;
+  transform: rotate(45deg);
+  opacity: 1;
+}
+
+.flower-rain-animation {
+  animation: dropRain 800ms linear infinite;
+}
+
+.flower-rain span:nth-of-type(1) {
+  left: 0;
+  animation-delay: -500ms;
+}
+.flower-rain span:nth-of-type(2) {
+  left: 15px;
+  animation-delay: -250ms;
+}
+.flower-rain span:nth-of-type(3) {
+  left: 30px;
+  animation-delay: -800ms;
+}
+.flower-rain span:nth-of-type(4) {
+  left: 45px;
+  animation-delay: -500ms;
+}
+.flower-rain span:nth-of-type(5) {
+  left: 60px;
+  animation-delay: -60ms;
+}
+.flower-rain span:nth-of-type(6) {
+  left: 75px;
+  animation-delay: -480ms;
+}
+
 @keyframes flowerRotate {
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes dropRain {
+  100% {
+    top: 100%;
+    opacity: 0;
   }
 }
