--- a/src/Components/Widget/Style/style.css
+++ b/src/Components/Widget/Style/style.css
@@ -1,18 +1,40 @@
 .main-gadget-container {
   display: flex;
-  background: linear-gradient(#b79981, #a6806a);
-  /* background-color: #fafafa; */
+  /* background: linear-gradient(#b79981, #a6806a); */
+  /* background: linear-gradient(#8bad91, #3eb7b5); */
+  /* background: radial-gradient(circle, #8bad91, #3eb7b5); */
+  /* background-color: #3eb7b5; */
+  /* border: 1px solid #3eb7b5; */
+  background-image: linear-gradient(
+    to right bottom,
+    #addab5,
+    #95d2b2,
+    #7bc9b1,
+    #5fc0b3,
+    #3eb7b5
+  );
   z-index: -5;
   border-radius: 20px;
   padding: 20px;
   flex-direction: row;
 }
 
-@media screen and (max-width: 600px) {
+.lamp-flower-parent-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-width: 240px;
+  padding: 0px 20px;
+}
+
+@media screen and (max-width: 992px) {
   .main-gadget-container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 5px 5px 50px 5px;
+    padding: 5px;
+  }
+  .lamp-flower-parent-container {
+    order: 2;
   }
 }
