complete home page
TODO: transition betweern pages
TODO: add solutions page

--- a/src/Components/Header/Style/style.css
+++ b/src/Components/Header/Style/style.css
@@ -3,6 +3,7 @@
   flex-direction: row-reverse;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 0px 15px;
   min-height: 45px;
+  background-color: #fdfdfd;
 }
 
 .menu-container {
