--- a/src/Components/LittleToolbar/Style/style.css
+++ b/src/Components/LittleToolbar/Style/style.css
@@ -33,7 +33,7 @@
 
 .little-toolbar.visible {
   animation: growToolbar 500ms cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
-  animation-delay: 2000ms;
+  animation-delay: 5s;
 }
 
 .little-toolbar.hidden {
