--- a/src/Components/_Solutions/SolutionsTopPhoto/Style/style.css
+++ b/src/Components/_Solutions/SolutionsTopPhoto/Style/style.css
@@ -9,7 +9,6 @@
   margin-top: 50px;
   width: 300px;
   height: 300px;
-  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
   filter: drop-shadow(0px 7px 15px grey);
 }
 
@@ -44,6 +43,15 @@
   animation: bottomRight 500ms cubic-bezier(0.075, 0.82, 0.165, 1) 1s forwards;
 }
 
+.solutions-photo-wrapper div:nth-of-type(3) {
+  animation: bottomLeft 500ms cubic-bezier(0.075, 0.82, 0.165, 1) 1500ms
+    forwards;
+}
+
+.solutions-photo-wrapper div:nth-of-type(4) {
+  animation: topLeft 500ms cubic-bezier(0.075, 0.82, 0.165, 1) 2s forwards;
+}
+
 @keyframes topRight {
   from {
     scale: 0;
@@ -63,5 +71,77 @@
   to {
     scale: 1;
     transform: translate(300px, 150px);
+  }
+}
+
+@keyframes bottomLeft {
+  from {
+    scale: 0;
+    transform: translate(0px, 0px);
+  }
+  to {
+    scale: 1;
+    transform: translate(-300px, 150px);
+  }
+}
+
+@keyframes topLeft {
+  from {
+    scale: 0;
+    transform: translate(0px, 0px);
+  }
+  to {
+    scale: 1;
+    transform: translate(-300px, -100px);
+  }
+}
+
+@media screen and (max-width: 792px) {
+  .solutions-photo-container {
+    margin-top: 30px;
+  }
+
+  @keyframes topRight {
+    from {
+      scale: 0;
+      transform: translate(0px, 0px);
+    }
+    to {
+      scale: 1;
+      transform: translate(-70px, -170px);
+    }
+  }
+
+  @keyframes bottomRight {
+    from {
+      scale: 0;
+      transform: translate(0px, 0px);
+    }
+    to {
+      scale: 1;
+      transform: translate(70px, -170px);
+    }
+  }
+
+  @keyframes bottomLeft {
+    from {
+      scale: 0;
+      transform: translate(0px, 0px);
+    }
+    to {
+      scale: 1;
+      transform: translate(70px, 220px);
+    }
+  }
+
+  @keyframes topLeft {
+    from {
+      scale: 0;
+      transform: translate(0px, 0px);
+    }
+    to {
+      scale: 1;
+      transform: translate(-70px, 220px);
+    }
   }
 }
