--- a/src/Components/_Store/StoreSuggtion/Style/style.css
+++ b/src/Components/_Store/StoreSuggtion/Style/style.css
@@ -1,18 +1,49 @@
-.store-suggtion-container {
+.store-suggestion-container {
   display: flex;
   padding: 20px;
-  background-color: brown;
+  border-radius: 10px;
+  background-color: #3d7090;
   height: fit-content;
   flex-direction: row-reverse;
+  flex-grow: 1;
+  /* overflow-x: scroll; */
 }
 
-.store-suggtion-container .cards-container {
+.store-suggestion-container .title {
+  color: #f8f8f8;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  direction: rtl;
+  align-items: center;
+  padding: 20px;
+  row-gap: 10px;
+  max-width: 150px;
+}
+
+.store-suggestion-container .title p {
+  font-size: larger;
+  font-weight: 400;
+}
+
+.store-suggestion-container .title button {
+  padding: 10px;
+  border-radius: 10px;
+  color: #212121;
+  font-family: Vazirmatn, sans-serif;
+  border: none;
+  display: flex;
+  align-items: center;
+}
+
+.store-suggestion-container .cards-container {
   display: flex;
   justify-content: right;
   margin-right: 20px;
+  column-gap: 10px;
 }
 
-.store-suggtion-container .cards-container .card {
+.store-suggestion-container .cards-container .card {
   padding: 10px 20px;
   background-color: #f8f8f8;
   border-radius: 5px;
@@ -23,7 +54,7 @@
   row-gap: 20px;
 }
 
-.store-suggtion-container .cards-container .off-container {
+.store-suggestion-container .cards-container .off-container {
   padding: 0px 5px;
   border-radius: 10px;
   background-color: #d2042d;
@@ -35,7 +66,7 @@
   margin-bottom: 5px;
 }
 
-.store-suggtion-container .cards-container .image-container {
+.store-suggestion-container .cards-container .image-container {
   padding: 5px;
   background-color: azure;
   border-radius: 10px;
@@ -44,21 +75,19 @@
   margin-bottom: 30px;
 }
 
-.store-suggtion-container .cards-container img {
+.store-suggestion-container .cards-container img {
   width: 100px;
   height: 100px;
 }
 
-.store-suggtion-container .price-container {
+.store-suggestion-container .price-container {
   display: flex;
   align-items: center;
   column-gap: 10px;
   direction: rtl;
-  flex-direction: row-reverse;
-  justify-content: space-between;
 }
 
-.store-suggtion-container .price-container p {
+.store-suggestion-container .price-container p {
   color: #212121;
   font-size: small;
 }
@@ -70,4 +99,41 @@
 
 .final-price-text {
   font-size: medium;
+}
+
+@media screen and (max-width: 600px) {
+  .store-suggestion-container .title {
+    max-width: fit-content;
+    width: auto;
+    flex-grow: 1;
+    flex-direction: column;
+    row-gap: 1px;
+    padding: 10px 0px 10px 0px;
+    justify-content: start;
+    align-items: flex-start;
+    row-gap: 10px;
+    margin-left: 20px;
+  }
+
+  .store-suggestion-container .title p {
+    font-size: small;
+    writing-mode: sideways-lr;
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .store-suggestion-container .title button {
+    font-size: 10px;
+    flex: 0.5;
+    height: max-content;
+    padding: 5px 2px;
+    writing-mode: sideways-lr;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+  }
+
+  .store-suggestion-container .title button svg {
+    transform: rotate(-90deg);
+  }
 }
