fixed store responsive start shop

--- a/src/Components/_Store/SideMenu/Style/style.css
+++ b/src/Components/_Store/SideMenu/Style/style.css
@@ -44,7 +44,7 @@
   padding: 5px 10px;
   border-radius: 5px;
   color: #fdfdfd;
-  background-color: #369e9c;
+  background-color: #3d7090;
   display: flex;
   flex-direction: row-reverse;
   column-gap: 10px;
