--- a/src/Components/_Store/ShopBody/Style/style.css
+++ b/src/Components/_Store/ShopBody/Style/style.css
@@ -100,6 +100,7 @@
   color: #212121;
   border: solid #303030 1px;
   border-radius: 15px;
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .shop-body-container .item:hover .product-detail-button {
