--- a/src/Components/_Store/Detail/Style/style.css
+++ b/src/Components/_Store/Detail/Style/style.css
@@ -8,3 +8,9 @@
   display: flex;
   flex-direction: row-reverse;
 }
+
+.upper-container .imgs-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
