--- a/src/Components/_Store/ImagesSlider/Style/style.css
+++ b/src/Components/_Store/ImagesSlider/Style/style.css
@@ -7,7 +7,16 @@
   scroll-snap-type: x mandatory;
   scrollbar-width: thin;
   scroll-behavior: smooth;
-  column-gap: 10px;
+  column-gap: 2px;
+  width: fit-content;
+}
+
+.images-slider-container img:last-of-type {
+  border-radius: 10px 0px 0px 10px;
+}
+
+.images-slider-container img:first-of-type {
+  border-radius: 0px 10px 10px 0px;
 }
 
 .images-slider-container img {
@@ -15,4 +24,11 @@
   max-width: 100px;
   cursor: pointer;
   margin: 10px 0px;
+  background-color: #f8f8f8;
+  padding: 5px;
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.images-slider-container img.selected {
+  background-color: #3d7090;
 }
