--- a/src/Components/_Store/IndexImage/Style/style.css
+++ b/src/Components/_Store/IndexImage/Style/style.css
@@ -20,6 +20,7 @@
   width: auto;
   object-fit: cover;
   transition: all 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  cursor: zoom-in;
 }
 
 .index-image-container .arrow {
@@ -32,4 +33,9 @@
   padding: 5px;
   border-radius: 50%;
   margin: 0px 10px;
+}
+
+.index-image-container .arrow:hover {
+  background-color: #3d7090;
+  color: #f9f9f9;
 }
