--- a/src/Components/_Store/TabsMenu/Style/style.css
+++ b/src/Components/_Store/TabsMenu/Style/style.css
@@ -6,9 +6,32 @@
 }
 
 .tabs-container .tabs {
-  flex-direction: row-reverse;
+  direction: rtl;
+}
+
+.tabs button {
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.tabs button:active {
+  transition: none;
 }
 
 .tabs-container .tab-header {
-  background-color: aqua;
+  background-color: #f8f8f8;
+}
+
+.tab-header.selected {
+  background-color: #7e7e7e;
+  color: #f9f9f9;
+  border-radius: 5px 5px 0px 0px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.tabs-container .tab-panel-container {
+  padding: 20px;
+  background-color: #f8f8f8;
+  border-radius: 0px 0px 10px 10px;
+  text-align: justify;
+  color: #212121;
 }
