--- a/src/Components/_Store/AppTab/Style/style.css
+++ b/src/Components/_Store/AppTab/Style/style.css
@@ -6,10 +6,17 @@
 
 .app-tab-container .link-container {
   display: flex;
+  color: #212121;
+}
+
+.app-tab-container .link-container .wrapper {
+  display: flex;
   column-gap: 10px;
   align-items: center;
+  border: solid 1px rgba(33, 33, 33, 0);
   padding: 5px;
-  color: #212121;
+  border-radius: 5px;
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .app-tab-container .link-container svg {
@@ -20,10 +27,13 @@
   color: #a4c639;
 }
 
-.app-tab-container .link-container p {
+.app-tab-container .link-container .wrapper:hover {
   cursor: pointer;
+  border: solid 1px rgba(33, 33, 33, 0.4);
 }
 
-.app-tab-container .link-container p:hover {
-  cursor: pointer;
+@media screen and (max-width: 900px) {
+  .app-tab-container .link-container .wrapper {
+    margin: 10px 0px;
+  }
 }
