--- a/src/Components/_Store/ImagesSlider/Style/style.css
+++ b/src/Components/_Store/ImagesSlider/Style/style.css
@@ -22,6 +22,8 @@
 .images-slider-container img {
   max-height: 100px;
   max-width: 100px;
+  min-width: 80px;
+  min-height: 80px;
   cursor: pointer;
   margin: 10px 0px;
   background-color: #f8f8f8;
