fixed img size on page body items

--- a/src/Components/_Store/IndexImage/Style/style.css
+++ b/src/Components/_Store/IndexImage/Style/style.css
@@ -1,6 +1,6 @@
 .detail-container .index-image-container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -11,15 +11,17 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  max-width: 560px;
+  height: auto;
+  max-height: 560px;
 }
 
 .detail-container .image-wrapper img {
   background-color: #fff;
   border-radius: 10px;
+  width: 100%;
+  height: auto;
   max-height: 560px;
-  width: auto;
-  min-height: 300px;
-  min-width: 300px;
   object-fit: cover;
   transition: all 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
   cursor: zoom-in;
