--- a/src/Components/_Home/TextBox/Style/style.css
+++ b/src/Components/_Home/TextBox/Style/style.css
@@ -1,15 +1,23 @@
+.banner-container {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  background-color: #fdfdfd;
+  padding: 30px;
+  border-radius: 20px;
+  margin-bottom: 20px;
+}
+
 .text-box-container {
   display: flex;
   align-items: center;
   flex-direction: row-reverse;
-  padding: 30px;
-  border-radius: 20px;
-  margin-bottom: 20px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  background-color: #fdfdfd;
   column-gap: 20px;
   justify-content: space-between;
+}
+
+.banner-container .banner-explain-text {
+  text-align: right;
+  margin-top: 30px;
 }
 
 @media screen and (max-width: 792px) {
@@ -17,5 +25,8 @@
     justify-content: center;
     column-gap: 0;
     row-gap: 20px;
+  }
+  .banner-container .banner-explain-text {
+    text-align: center;
   }
 }
