--- a/src/Components/_Store/Detail/Style/style.css
+++ b/src/Components/_Store/Detail/Style/style.css
@@ -12,5 +12,5 @@
 .upper-container .imgs-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: stretch;
 }
