--- a/src/Components/_Store/IndexImage/Style/style.css
+++ b/src/Components/_Store/IndexImage/Style/style.css
@@ -1,30 +1,30 @@
 .detail-container .index-image-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
+  padding: 0px 20px;
 }
 
 .detail-container .image-wrapper {
   display: flex;
   flex-direction: row;
-  padding: 20px;
   justify-content: center;
   align-items: center;
   overflow: hidden;
   max-width: 560px;
   height: auto;
-  max-height: 560px;
+  height: 560px;
 }
 
 .detail-container .image-wrapper img {
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 5px;
   width: 100%;
   height: auto;
-  max-height: 560px;
-  object-fit: cover;
+  max-height: 550px;
+  object-fit: contain;
   transition: all 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
-  cursor: zoom-in;
+  cursor: crosshair;
 }
 
 .index-image-container .arrow {
@@ -42,4 +42,10 @@
 .index-image-container .arrow:hover {
   background-color: #3d7090;
   color: #f9f9f9;
+}
+
+@media (max-width: 600px) {
+  .detail-container .image-wrapper {
+    height: auto;
+  }
 }
