--- a/src/Components/_Home/Comments/Style/comments.css
+++ b/src/Components/_Home/Comments/Style/comments.css
@@ -2,7 +2,7 @@
   margin-top: 20px;
   display: flex;
   justify-content: flex-start;
-  flex-direction: row-reverse;
+  flex-direction: column;
   padding: 20px 0px 0px 0px;
   overflow-x: scroll;
   scrollbar-width: thin; /* Firefox */
@@ -73,4 +73,17 @@ span {
   justify-content: center;
   align-items: center;
   color: #f1f1f1;
+}
+
+.comments-parent .header {
+  direction: rtl;
+  padding: 0px 10px;
+  display: flex;
+  column-gap: 10px;
+  color: #1f3746;
+  align-items: center;
+}
+
+.comments-parent .header p {
+  font-weight: 450;
 }
