--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,7 @@ body {
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
   margin: 0;
+  position: relative;
 }
 
 body::-webkit-scrollbar {
