--- a/src/Components/_Home/Comments/Style/comments.css
+++ b/src/Components/_Home/Comments/Style/comments.css
@@ -50,8 +50,9 @@
   /* text-justify: auto; */
   position: relative;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   scroll-snap-align: end;
+  flex-direction: column;
 }
 
 .comment-item p,
@@ -61,7 +62,7 @@ span {
   -moz-user-select: none;
 }
 
-.comment-item div {
+.comment-item div:nth-of-type(1) {
   content: "";
   width: 70px;
   height: 70px;
@@ -73,6 +74,14 @@ span {
   justify-content: center;
   align-items: center;
   color: #f1f1f1;
+}
+
+.comment-item div:nth-of-type(2) {
+  display: flex;
+  align-items: center;
+  column-gap: 5px;
+  direction: rtl;
+  color: #e91e63;
 }
 
 .comments-parent .header {
